fix: text align cart product

--- a/src/components/CartProduct/styles.css
+++ b/src/components/CartProduct/styles.css
@@ -28,8 +28,8 @@
 }
 .cart-product--description{
     display: flex;
-    align-items: center;
     flex-direction: column;
+    text-align: left;
 }
 .cart-product--description h3{
     font-family: 'Inter';
